[package]
name = "villain"
version = "0.0.1"
edition = "2021"
authors = ["MoeKasp <martin@mkasprzyk.de>", "sawmurai <fabian.becker@b-it-d.de>", "TimTheBig"]
description = "A webframework that utilizes Vue templates to generate HTML. Aimed to replace the need for JavaScript in web development."
license = "MIT OR Apache-2.0"
repository = "https://github.com/MoeKasp/villain.rs"
readme = "README.md"

[lib]
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.75", features = ["extra-traits"] }
proc-macro2 = "1.0.86"
html = "0.6.3"
thiserror = "1.0.63"
